--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Простая реализация выбора языка в игре.",
   "unity": "2021.3",
   "keywords": [
-    "cozydragon, localization"
+    "kaynir, localization"
   ],
   "author": {
     "name": "Денис Знов",
