--- a/Runtime/Kaynir.SimpleLocalization.asmdef
+++ b/Runtime/Kaynir.SimpleLocalization.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "com.cozydragon.localization",
-    "rootNamespace": "CozyDragon.Localization",
+    "name": "Kaynir.SimpleLocalization",
+    "rootNamespace": "Kaynir.SimpleLocalization",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
